# ferromark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIST_FIXES_PLAN.md  PERF_ATTEMPTS.md  README.md  build.rs  md-new.md  release-please-config.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-homepage.yml  release.yml
benches/: comparison.rs  fenced_code_renderer.rs  footnotes.rs  mdx.rs  options.rs  parsing.rs  profiles.rs
benches/fixtures/: commonmark-20k.md  commonmark-50k.md  commonmark-5k.md  tables-5k.md
benchmarks/md4c-comparison/: Cargo.toml  build.rs
benchmarks/md4c-comparison/benches/: comparison.rs
benchmarks/md4c-comparison/src/: lib.rs
benchmarks/pulldown-comparison/: Cargo.toml  README.md
benchmarks/pulldown-comparison/benches/: comparison.rs  profiling.rs
benchmarks/pulldown-comparison/scripts/: capture-cpu-profile.sh  run-diagnostic.sh  run-primary-matrix.sh  run-publication-baseline.sh
benchmarks/pulldown-comparison/src/: allocation.rs  corpus.rs  lib.rs  metadata.rs  model.rs
benchmarks/pulldown-comparison/tests/: diagnostic_matrix.rs  parity_semantics.rs
docs/: migration-0.2.md  migration-0.3.md  releasing.md
docs/arch/: ADR-0001-core-architecture-streaming-no-ast.md  ADR-0002-inline-parsing-three-phase.md  ADR-0003-link-reference-defs-paragraph-extraction.md  ADR-0004-gfm-extensions-opt-in-architecture.md  ADR-0005-front-matter-pre-parse-extraction.md  ADR-0006-heading-ids-deferred-tag-emission.md  ADR-0007-math-spans-dollar-delimiters.md  ADR-0008-inline-markup-syntax-alignment.md  ADR-0009-mdx-compatibility-and-performance-boundaries.md  ADR-0010-explicit-markdown-options-and-dialect-presets.md  ADR-0011-event-based-presentation-adapter.md  ARCH-COMP-001-parser-comparison-matrix.md  ARCH-COMP-001.md  ARCH-EXP-001-entity-decode-fast-path.md  ARCH-EXP-002.md  ARCH-EXP-003-inline-emit-hot-path-checks.md  ARCH-EXP-004-skip-bracket-collection.md  ARCH-EXP-005-unstable-sort-emit-points.md  ARCH-EXP-006-preallocate-event-buffers.md  ARCH-EXP-007-simple-streaming-fast-path.md  ARCH-EXP-008-list-buffered-render.md  ARCH-EXP-009-slice-based-indent-scanning.md  ARCH-EXP-010.md  ARCH-EXP-011-autolink-filter-via-index.md  ARCH-EXP-012-skip-code-span-without-backticks.md  ARCH-EXP-013.md  ARCH-EXP-014-pre-scan-overhead-bench.md  ARCH-EXP-014.md  ARCH-EXP-015.md  ARCH-EXP-016-mdx-container-flow-recognition.md  ARCH-PLAN-001-performance-opportunities.md  ARCH-RFC-002-resolved-inline-sink.md
docs/plans/: 2026-03-12-inline-markup-trio-design.md  2026-03-12-inline-markup-trio-implementation-plan.md  2026-07-11-comprehensive-performance-profile-report.md  2026-07-11-comprehensive-performance-profiling-design.md  2026-07-11-comprehensive-performance-profiling-implementation-plan.md  2026-07-11-issue-63-publication-baseline-plan.md  2026-07-11-markdown-profiles-parity-design.md  2026-07-11-pulldown-gap-performance-plan.md  2026-07-11-v0.3-integrations-design.md
docs/reports/: 2026-07-11-epic-71-final-scorecard.md  2026-07-11-issue-63-publication-baseline-criterion-estimates.json  2026-07-11-issue-63-publication-baseline.json  2026-07-11-issue-64-inline-summary.json  2026-07-11-issue-65-heading-id-state.json  2026-07-11-issue-66-contiguous-paragraphs.json  2026-07-11-issue-67-rare-inline-buffers.json  2026-07-11-issue-68-block-paths.json  (+2 more)
examples/: debug_nested.rs  fenced_code_renderer.rs  mdx_segment.rs
homepage/: .gitignore  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-router.config.ts  tsconfig.json  vite.config.ts
node/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
node/native/: Cargo.toml
node/native/src/: lib.rs
scripts/: check-workflow-pins.sh  generate_commonmark_50k.py  profile_commonmark50k.sh  profile_simple.sh
src/: cursor.rs  escape.rs  footnote.rs  lib.rs  limits.rs  link_ref.rs  main.rs  profiling.rs  range.rs  render.rs
tests/: callout_tests.rs  commonmark_spec.rs  fenced_code_renderer_tests.rs  footnote_tests.rs  front_matter_tests.rs  gfm_autolink_tests.rs  gfm_disallowed_html_tests.rs  gfm_strikethrough_tests.rs  gfm_table_tests.rs  gfm_task_list_tests.rs  heading_id_tests.rs  highlight_tests.rs  indented_code_options_tests.rs  line_comment_tests.rs  math_tests.rs  mdx_event_tests.rs  mdx_inline_tests.rs  mdx_segment_tests.rs  options_tests.rs  profile_tests.rs  resource_limits_tests.rs  subscript_tests.rs  superscript_tests.rs  untrusted_rendering_tests.rs
(+46 files in other folders)
