[package]
name = "ferromark"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Ultra-high-performance Markdown to HTML compiler"
license = "MIT"
repository = "https://github.com/sebastian-software/ferromark"
homepage = "https://github.com/sebastian-software/ferromark"
readme = "README.md"
keywords = ["markdown", "html", "parser", "commonmark", "gfm"]
categories = ["parsing", "text-processing", "web-programming"]

[lib]
name = "ferromark"
path = "src/lib.rs"

[[bin]]
name = "ferromark"
path = "src/main.rs"

[dependencies]
memchr = "2.7"
smallvec = "1.13"
html-escape = { version = "0.2", default-features = false }
rustc-hash = { version = "2.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Competitor libraries for benchmarking
pulldown-cmark = "0.13"
comrak = "0.50"

[build-dependencies]
cc = "1.1"

[features]
default = ["std"]
std = []
neon = []
trace = []

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "comparison"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
inherits = "release"
debug = true
