[package]
name = "ferromark-pulldown-comparison"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
ferromark = { path = "../.." }
pulldown-cmark = "=0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
profiling = ["ferromark/profiling"]

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "profiling"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true

[workspace]
